--- a/index.html
+++ b/index.html
@@ -2,10 +2,69 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <!-- We need this meta tag to properly display our pages at mobile size/ make it responsive-->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <!-- order matters, link to gris file first, then main.css -->
+    <link href="css/grid.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
+    <title>Google Fonts example</title>
 </head>
 <body>
-    
+    <h1 class="hidden">The Goonies</h1>
+    <div id="container">
+    <main id="mainContent">
+        <article>
+        <!-- content goes here -->
+        <div class="container1">
+            <h1>THE QU3NCH!</h1>
+            <img id="img1" src="images/martin-sanchez-igSCxtyORzY-unsplash.jpg">
+        <p>QU3NCH! is the latest craze in the beverage industry, and it's no surprise why. This unique drink was created by a young entrepreneur named Sarah Smith, who saw a need for a more refreshing and hydrating option on the market.</p>
+            </div>
+        </article>
+        <div class="horizontal">
+        </div>
+        <article>
+            <h2>INGREDIENTS</h2>
+            <img id="img2" src="images/pexels-timur-weber-8679349.jpg">
+        <p>The main ingredient in QU3NCH! is a special blend of electrolytes and vitamins that work together to help the body hydrate faster and more efficiently. This makes it the perfect drink for athletes, as well as anyone who is looking to stay hydrated throughout the day.</p>
+        </article>
+
+        <div class="horizontal">
+        </div>
+        <article>
+            <h2>Who is it for?</h2>
+            <img id="img3" src="images/pexels-pixabay-34514.jpg">
+        <p>But QU3NCH! isn't just for athletes. It's also a great option for people who are looking to improve their overall health and wellness. The electrolytes in QU3NCH! can help regulate blood pressure and support a healthy immune system, making it a valuable addition to anyone's diet.</p>
+        </article>
+
+        <div class="horizontal">
+        </div>
+        <article>
+            <h2>Why QU3NCH!</h2>
+            <img id="img4" src="images/pexels-anna-shvets-5069203.jpg">
+        <p>But QU3NCH! isn't just for athletes. It's also a great option for people who are looking to improve their overall health and wellness. The electrolytes in QU3NCH! can help regulate blood pressure and support a healthy immune system, making it a valuable addition to anyone's diet.</p>
+        </article>
+
+        <div class="horizontal">
+        </div>
+        <article>
+            <h2>So What's Next</h2>
+            <img id="img5" src="images/pexels-gonzalo-acun╠âa-10923070.jpg">
+        <p>So, what's next for QU3NCH! and its creator Sarah Smith? With the success the company has seen so far, it's clear that the sky is the limit. Sarah is already working on new and innovative ways to improve the formula and make it even more accessible to people all over the world.</p>
+        </article>
+
+        <div class="horizontal">
+        </div>
+        <article>
+            <h2>Acknowledge</h2>
+            <img id="img6" src="images/viktor-bystrov-mn7eTQFHNHc-unsplash.jpg">
+        <p>One thing is for sure - QU3NCH! is here to stay, and its creator Sarah Smith is sure to continue making waves in the beverage industry for years to come. If you're looking for a refreshing, hydrating, and sustainable drink option, look no further than QU3NCH!.</p>
+        </article>
+    </main>
+    </div>
+
+    <script src="js/main.js"></script>
 </body>
 </html>
